[gd_scene format=3 uid="uid://cci83b0uexl5k"]

[ext_resource type="Script" uid="uid://bseixtygakgm2" path="res://give_card_effect.gd" id="1_kmnm1"]
[ext_resource type="Texture2D" uid="uid://b0hrtmg55c17b" path="res://assets/profil/joueur.png" id="2_c6ynf"]
[ext_resource type="Texture2D" uid="uid://bdrhkb0vaf44i" path="res://assets/icone/flecheDuel.webp" id="3_smboq"]
[ext_resource type="Texture2D" uid="uid://jpvdd31q8et" path="res://assets/profil/nourriture.webp" id="4_c6ynf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_smboq"]
bg_color = Color(0.1764706, 0.09411765, 0.050980393, 1)

[node name="GiveCardEffect" type="Control" unique_id=450712904]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1401.0
offset_bottom = -821.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kmnm1")

[node name="Panel" type="Panel" parent="." unique_id=1683501090]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_smboq")

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=935656350]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 56.0
offset_top = 48.0
offset_right = -47.0
offset_bottom = -66.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GivePlayer" type="TextureRect" parent="HBoxContainer" unique_id=1922662855]
layout_mode = 2
texture = ExtResource("2_c6ynf")
expand_mode = 3
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer" unique_id=1097262004]
layout_mode = 2
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer" unique_id=465378647]
layout_mode = 2
alignment = 1

[node name="Effect" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2" unique_id=127184694]
modulate = Color(0.9607843, 0.8901961, 0.7647059, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "-1"

[node name="Type" type="TextureRect" parent="HBoxContainer/VBoxContainer/HBoxContainer2" unique_id=513379889]
modulate = Color(0.9607843, 0.8901961, 0.7647059, 1)
layout_mode = 2
texture = ExtResource("4_c6ynf")
expand_mode = 2
stretch_mode = 5

[node name="Arrow" type="TextureRect" parent="HBoxContainer/VBoxContainer" unique_id=68585774]
modulate = Color(0.9607843, 0.8901961, 0.7647059, 1)
layout_mode = 2
texture = ExtResource("3_smboq")
expand_mode = 1
stretch_mode = 2

[node name="GetPlayer" type="TextureRect" parent="HBoxContainer" unique_id=219874437]
layout_mode = 2
texture = ExtResource("2_c6ynf")
expand_mode = 3
stretch_mode = 5

[node name="Timer" type="Timer" parent="." unique_id=2128117720]
wait_time = 4.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
